# ddevmem

./: .gitignore  Cargo.toml  README.md  build.rs
crates/ddevmem-core/: Cargo.toml
crates/ddevmem-core/src/: lib.rs
crates/ddevmem-register-map/: Cargo.toml
crates/ddevmem-register-map-macro/: Cargo.toml
crates/ddevmem-register-map-macro/src/: kw.rs  lib.rs  register.rs
ddevmem-macro/: Cargo.toml
ddevmem-macros/: Cargo.toml  LICENSE-MIT  README.md
ddevmem-macros/src/: lib.rs
examples/: array_regs.rs  bitfield.rs  default_bus.rs  multi_same_map.rs  multi_web.rs  typed_bitfield.rs  web_auth.rs  web_same_map.rs  web_server.rs  web_showcase.rs
src/: devmem.rs  lib.rs  reg.rs  web.rs  web_multi.html  web_ui.html
