[workspace.package]
version = "0.4.0+alpha.3"
edition = "2021"
authors = ["Dodeca Shaven <dodeca@tutamail.com>"]
repository = "https://github.com/dodeca1337/ddevmem"
license = "MIT"

[package]
name = "ddevmem"
keywords = ["devmem"]
description = "Library for accessing the physical address space using /dev/mem similar to busybox devmem"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
memmap2 = { version = "0.9.5", optional = true }
page_size = "0.6.0"
bytemuck = "1.20.0"
paste = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["device", "register-map"]
register-map = ["paste"]
reg = []
device = ["memmap2"]
emulator = []
web = ["register-map", "axum", "tokio", "serde", "serde_json", "base64"]

[[example]]
name = "bitfield"
required-features = ["register-map"]

[[example]]
name = "default_bus"
required-features = ["register-map"]

[[example]]
name = "web_server"
required-features = ["web"]

[[example]]
name = "web_auth"
required-features = ["web"]

[[example]]
name = "multi_web"
required-features = ["web"]
