[package]
name = "ddevmem-macro"
description = "Macro for ddevmem"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits", "full", "visit"] }
heck = "0.5.0"
