[package]
name = "ddevmem-macros"
description = "Proc-macro companion for ddevmem: the register_map! macro"
readme = "README.md"
keywords = ["devmem", "mmio", "register", "embedded", "macro"]
categories = ["embedded", "hardware-support", "no-std"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
web = []

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
